[FS-865] Use Undertow for async execution